<resources>
    <string name="app_name">isaiahgarciaMMMedley</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Image Scaling</string>
    <string name="menu_slideshow">Video</string>
    <string name="menu_imagescaling">Image Scaling</string>
    <string name="menu_videoplayback">Video Playback</string>
    <string name="menu_texttospeech">Text to Speech</string>
    <string name="menu_speechtotext">Speech to Text</string>
    <string name="menu_fireworks">Fireworks</string>
    <string name="sttInitPrompt">Tap on FAB to speak</string>
    <string name="ttsInitPrompt">Type something you want me to say!</string>
</resources>